--- a/modules/index.module.css
+++ b/modules/index.module.css
@@ -1,6 +1,5 @@
 .container{
     min-height: 100vh;
-    padding: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,15 +10,23 @@
 .heroContainer{
     width: 100%;
     height: 100vh;
-    background-color: aqua;
+    background-image: url("https://res.cloudinary.com/de2od3piw/image/upload/v1703011829/Programadores-en-Argentina_y05nss.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgb(5, 5, 5);
 }
 
 .aboutContainer{
+    min-height: 100vh;
+    width: 100%;
+    padding: 5rem;
     display:flex;
     flex-direction: row;;
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    background-color: rgba(0, 0, 0, 0.856);
 }
 
 .aboutText{
