--- a/modules/index.module.css
+++ b/modules/index.module.css
@@ -29,8 +29,18 @@
     background-color: rgba(0, 0, 0, 0.856);
 }
 
-.aboutText{
-    width: 40%;
+.title{
+    text-align: center;
+    color: antiquewhite;
+}
+
+
+
+.aboutParagraph{
+    margin: auto;
+    text-align: center;
+    width: 60%;
+    color: antiquewhite;
 }
 
 .aboutText p{
@@ -57,7 +67,7 @@
 
 .servicesTitle{
     text-align: center;
-    margin-bottom: 2rem;
+    margin: 2rem;
 }
 
 .servicesCardContainer{
@@ -74,6 +84,7 @@
     border: 1px solid rgb(160, 157, 157);
     padding: 32px;
     border-radius: 15px;
+    max-width: 30%;
 }
 
 .servicesCard h3{
