--- a/modules/navbar.module.css
+++ b/modules/navbar.module.css
@@ -3,3 +3,10 @@
     backdrop-filter: blur(5px);
     color: black;
 }
+
+.mainIcon{
+    color: white;
+    margin: 10px 32px 0px 0px;
+    margin-left: 32px;
+    font-size: 3rem;
+}
