correccion de textos y agregar link linkedin

--- a/modules/index.module.css
+++ b/modules/index.module.css
@@ -43,6 +43,12 @@
     color: antiquewhite;
 }
 
+.aboutParagraph p{
+    
+    text-align: center;
+    
+}
+
 .aboutText p{
     text-align: justify;
     padding: 8px 0px;
